codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_missing_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                                 │
│                                                                           │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date             │
│ information on rate limits and credits                                    │
│                                                                           │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries detailed) │
│  Directory: [[workspace]]                                                 │
│  Approval:         on-request                                             │
│  Sandbox:          read-only                                              │
│  Agents.md:        <none>                                                 │
│                                                                           │
│  Token usage:      750 total  (500 input + 250 output)                    │
│  Context window:   100% left (750 used / 272K)                            │
│  Limits:           data not available yet                                 │
╰───────────────────────────────────────────────────────────────────────────╯
